fixed banner issues on mobile, added a new banner background for mobile and fixed work img issues when on mobile

--- a/css/styles.css
+++ b/css/styles.css
@@ -27,7 +27,7 @@ html, body{
     background-image: url("../img/banner.jpg");
     background-size: cover;
     background-repeat: no-repeat;
-    background-position: center center;
+    background-position: center;
     background-attachment: fixed;
     position: relative;
     margin-top: -80px;
@@ -140,13 +140,31 @@ h2{
         padding-left: 0;
     }
 
+    #banner{
+        background-image: url("../img/mobilebanner.png");
+        background-attachment: scroll;
+    }
+
+    .headers{
+        margin-bottom: 15%;
+    }
+
     .headerwork{
         margin-top: 25%;
     }
 
     .headerabout{
-    margin-top: 21%;
-}
+        margin-top: 21%;
+    }
+
+    .workrows{
+        margin-bottom: 9%;
+    }
+
+    .img-responsive{
+        max-width: 150px;
+    }
+
 
 }
 
